# Forest

./: .gitignore  Cargo.toml  README.md
assets/: bear.mtl
doc/: fog.rs
maps/azeroth/: adt_24_53.mtl  adt_24_54.mtl  adt_24_55.mtl  adt_25_22.mtl  adt_25_23.mtl  adt_25_24.mtl  adt_25_25.mtl  adt_25_26.mtl  adt_25_27.mtl  adt_25_28.mtl  adt_25_29.mtl  adt_25_30.mtl  adt_25_31.mtl  adt_25_32.mtl  adt_25_33.mtl  adt_25_34.mtl  adt_25_35.mtl  adt_25_36.mtl  adt_25_47.mtl  adt_25_48.mtl  adt_25_49.mtl  adt_25_50.mtl  adt_25_51.mtl  adt_25_52.mtl  adt_25_53.mtl  adt_25_54.mtl  adt_25_55.mtl  adt_25_56.mtl  adt_25_57.mtl  adt_25_58.mtl  adt_26_22.mtl  adt_26_23.mtl  adt_26_24.mtl  adt_26_25.mtl  adt_26_26.mtl  adt_26_27.mtl  adt_26_28.mtl  adt_26_29.mtl  adt_26_30.mtl  adt_26_31.mtl  (+239 more)
maps/azeroth/foliage/: apkflo02.mtl  dskgra03.mtl  dwmroc01.mtl  elwgra08.mtl  sivbus01.mtl  tifpla01.mtl  wetgra02.mtl
src/: main.rs
src/camera/: orbit_camera.rs
src/plugins/: obj_loader.rs
